12345678901234567890123456789012345678901234567890123456789012345678901234567890
         1         2         3         4         5         6         7         8
----+----|----+----|----+----|----+----|----+----|----+----|----+----|----+----|



ChangeLog (2003.nn.nn):
=======================

- Applied patches:
  - iometer-2003.05.10-IoMtrGlobalDefines2.patch by Daniel Scheibli
    (introduces the IOMTR_* global defines to consolidate the different
    global defines coming with the different platforms - ease future
    ports).
  - iometer-2003.05.10-IsBigEndianFunction.patch by Daniel Scheibli
    (Does endian type detection for CPU during runtime. This function
    replaces the [BIG|LITTLE]_ENDIAN_ARCH global defines).
  - iometer-2003.05.10-Solaris9onI386.patch by Daniel Scheibli
    (Assimilates the patch submitted by Robert Jones to build with
    Solaris 9 on x86 (i386)).
  - iometer-2003.05.10-IoTimeConsolidation.patch by Daniel Scheibli
    (Cleanup for the IOTime.* files - getting rid of IOTime.h also).
  - iometer-2003.05.10-IoMtrGlobalDefines1.patch by Daniel Scheibli
    (introduces the IOMTR_* global defines to consolidate the different
    global defines coming with the different platforms - ease future
    ports).
- Documentation:
   - Added a remark into the .../README file (containing additions for
     running Dynamo on a Linux machine with NTPL support).
- Others:
   - Added the source and makefile provided by Vedran Degoricija to get
     the Iometer and Dynamo executable build using the Microsoft Driver
     Development Kit (DDK).



ChangeLog (2003.05.10):
=======================

- Applied patches:
  - iometer-2003.02.15-ResultEndTimeHighRes.patch by Daniel Scheibli
    (modifies the result file output to contain the milliseconds as well).
  - iometer-2003.05.04-CIOB5.patch by Matt Robinson (modifies the mechanisms
    for read and writes in IOMeter so that different buffers are used each